# Lugli-language

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
examples/: closure.lg  comments.lg  comparison.lg  conditionals.lg  const.lg  error.lg  fib.lg  fn.lg  for-in.lg  global.lg  import.lg  in.lg  increment_decrement.lg  input.lg  list-object.lg  lists.lg  loop.lg  math.lg  module.lg  number-object.lg  prefix.lg  print.lg  process.lg  say_hello.lg  std_structs.lg  string-object.lg  strings.lg  structs.lg  test.lg  variables.lg  while.lg
examples/samples/: hangman.lg
examples/syntax/: assign_with_math.lg  const.lg  fib.lg  fn.lg  global.lg  hello_language.lg  import.lg  in.lg  lists.lg  loop.lg  math.lg  numbers.lg  std_structs.lg  structs.lg
files_samples/: simple.lg  simple.lugli
lugli/: Cargo.toml
lugli/src/: ast.rs  environment.rs  interpreter.rs  lib.rs  parser.rs  token.rs
lugli/src/stdlib/: global.rs  mod.rs
src/: ast.rs  environment.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs
src/stdlib/: datetime.rs  global.rs  list.rs  mod.rs  number.rs  string.rs
