[package]
name = "Lugli-language-interpreter"
version = "0.2.0"
description = "My 'lugli' language interpreter for learning purposes"
authors = ["Vinicios Lugli <vinicioslugli@gmail.com>"]
edition = "2018"

[dependencies]
logos = "0.12"
thiserror = "1.0"
hashbrown = "0.12.0"
regex = "1.5.4"
clap = "3.0.0-beta.4"
colored = "2"
chrono = "0.4.12"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
# panic = "abort"