[package]
name = "Lugli-language-interpreter"
version = "0.3.0"
description = "My 'lugli' language interpreter for learning purposes"
authors = ["Vinicios Lugli <vinicioslugli@gmail.com>"]
edition = "2021"

[dependencies]
logos = "0.12.1"
thiserror = "1.0.37"
hashbrown = "0.12.3"
regex = "1.6.0"
clap = "3.0.0-beta.4"
colored = "2.0.0"
chrono = "0.4.22"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
# panic = "abort"
